# dccpath

./: README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
src/dccpath/: __init__.py  _blender.py  _maya.py  _mobu.py  blender.py  maya.py  mobu.py
src/dccpaths/: __init__.py  blender.py  maya.py  mobu.py
tests/: test_blender.py  test_maya.py  test_mobu.py
