[project]
name = "dccpath"
dynamic = ["version"]
description = "Utility library for locating common DCC (Digital Content Creation) software executables"
readme = "README.md"
authors = [
    { name = "Henrik Wilhelmsen", email = "contact@henrikwilhelmsen.com" },
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.basedpyright]
include = ["src"]

[dependency-groups]
dev = [
    "basedpyright>=1.28.3",
    "debugpy>=1.8.13",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]
